[package]
name = "hackernews-telegram"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
openai-flows = "0.8.2"
tg-flows = "0.2"
store-flows = "0.3"
serde_json = "1.0"
dotenv = "0.15.0"
flowsnet-platform-sdk = "0.1"
log = "0.4"
tokio_wasi = { version = "1.25.1", features = ["macros", "rt", "time"] }
anyhow = "1"
http_req_wasi = "0.11.1"
web-scraper-flows = "0.1.0"
serde= { version = "1.0", features = ["derive"] }
